--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>my second repo github</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>i can push to github</h1>
   <h2>mama i can code now</h2>
   <h3>new code changed</h3>
+  <p>more peragraph</p>
+  <p>i am coding coding and coding</p>
 </body>
 
 </html>
