--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-  <h1>i can push to github.com</h1>
+  <h1>i can push to github.com agin agin</h1>
   <h2>mama i can code now</h2>
   <h3>new code changed</h3>
   <p>more peragraph</p>
   <p>i am coding coding and coding</p>
   <img src="aa.jpg" alt="">
   <img src="kajol.jpg.jpg" alt="">
+  <img src="images/kajol1.jpg" alt="">
 </body>
 
 </html>
